[package]
name = "eocker-registry"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
description = "An OCI image registry for the curious."
repository = "https://github.com/eocker/eocker"
edition = "2018"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
hyper = { version = "0.14" }
tokio-stream = { version = "0.1.7", features = ["sync"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
eocker = { path = "../eocker" }
urlencoding = "2.0.0"
env_logger = "0.9"
