[package]
name = "eocker"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
description = "A library for OCI images."
repository = "https://github.com/eocker/eocker"
edition = "2018"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.1", features = ["serde"] }
