[package]
name = "eocker"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
description = "A library for OCI images."
repository = "https://github.com/eocker/eocker"
edition = "2018"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.9.4", features = ["json"] }
chrono = { version = "0.4.1", features = ["serde"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.9"
